--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- Place favicon.ico in the root directory -->
         <script src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
-        <script src="https://api.trello.com/1/client.js?key=e0a81342d403563879f9766656bbe028"></script>
-        <script src="http://feedback.site/min/reporter-min.js"></script>
+        <script src="https://api.trello.com/1/client.js?key=[api-key]"></script>
+        <!-- <script src="http://feedback.site/min/reporter-min.js"></script> -->
+        <script src="http://cdn.rawgit.com/Marc3llo/reporter/master/min/reporter-min.js"></script>
         <script>
             $(document).ready(function(){
-                reporter('55fbd420c518ded323e97853');
+                reporter('[idList]');
             });
         </script>
     </head>
